# Growbot

./: CMakeLists.txt  README.md  RaspberryPi-cache.cmake
cmake/: Conan.cmake  GrpcProtoCompiler.cmake  ManualThirdParty.cmake
lib/: CMakeLists.txt
lib/Actuators/: ActuatorService.grpc.pb.cc  ActuatorService.grpc.pb.h  ActuatorService.pb.cc  ActuatorService.pb.h  ActuatorService.proto  CMakeLists.txt  GardenService.proto  GenericPump.cpp  GenericPump.h  GikfunAirDiaphragmPump.cpp  GikfunAirDiaphragmPump.h  IActuator.h
lib/Adapters/: ADS1015.h  IAdc.h  IReader.h  Noyito4ChannelAdc.cpp  Noyito4ChannelAdc.h  NoyitoAdc.cpp  NoyitoAdc.h  NoyitoAdcReader.cpp  NoyitoAdcReader.h
lib/Image/: ICamera.h  PiCam.cpp  PiCam.h
lib/Sensors/: IAnalogueSensor.h  MoistureSensor.cpp  MoistureSensor.h
proto/: GardenService.proto
protos/: ActuatorService.proto  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
